feat: update chamado and dockerfile
