# backend/swagger.json
@@ -398,7 +398,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/chamado/create": {
       "post": {
         "summary": "Create Chamado",
         "tags": [
@@ -435,6 +437,70 @@
         "responses": {
           "201": {
             "description": "Chamado created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Invalid input",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/chamado/update": {
+      "post": {
+        "summary": "Update Chamado",
+        "tags": [
+          "Chamado"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateChamado"
+              },
+              "examples": {
+                "example-1": {
+                  "summary": "Exemplo de requisição para atualizar um chamado",
+                  "value": {
+                    "cd_hospital": "141109862",
+                    "cd_medico": "1"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Chamado atualizado successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -580,6 +646,19 @@
           "ie_status_chamado": {
             "type": "string",
             "example": "aberto"
+          },
+          "cd_medico": {
+            "type": "integer",
+            "example": "1"
+          }
+        }
+      },
+      "UpdateChamado": {
+        "type": "object",
+        "properties": {
+          "nr_chamado": {
+            "type": "integer",
+            "example": "141109862"
           },
           "cd_medico": {
             "type": "integer",
